# xela_base_extension

./: .gitmodules  README.md
xela_ah_r2c_bringup/: CMakeLists.txt  README.md  package.xml  xela_ah_r2c_bringup.md
xela_ah_r2c_bringup/config/: allegro_hand_left_r2c.srdf
xela_ah_r2c_bringup/launch/: xacro_launch.py
xela_ah_r2c_bringup/mesh/: ur_adapter.stl
xela_ah_r2c_bringup/resource/: xela_ah_r2c_bringup
xela_ah_r2c_bringup/rviz/: all_sensor_view.rviz  urdf_rviz2.rviz
xela_ah_r2c_bringup/urdf/: allegro_hand_left_curved.xacro  allegro_hand_left_r2c.xacro  allegro_hand_right_curved.xacro  allegro_hand_right_r2c.xacro  x_allegro_left_curved.xacro  x_allegro_left_no_taxel.urdf  x_allegro_left_w_ur_adapter.xacro  x_allegro_right_curved.xacro  x_allegro_right_no_taxel.urdf  x_allegro_right_w_ur_adapter.xacro
xela_taxel_msgs/: CMakeLists.txt  README.md  package.xml  xela_taxel_msgs.md
xela_taxel_msgs/msg/: XTaxelSensor.msg  XTaxelSensorArray.msg  XTaxelSensorT.msg  XTaxelSensorTArray.msg
xela_taxel_msgs/srv/: ClearGroups.srv  ListGroups.srv  ListModuleFilters.srv  ToggleGroup.srv  ToggleModule.srv
