<?xml version="1.0"?>
<package format="3">
  <name>xela_ah_r2c_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for Allegro Hand with ros2_control + XELA tactile setup.</description>

  <maintainer email="wonikrobotics@gmail.com">Wonikrobotics-git</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
